--- a/calculator.html
+++ b/calculator.html
@@ -7,20 +7,24 @@
 </head>
 <body>
     <input type="text" id="calculator-display" value="12345"/>
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>4</button>
-    <button>5</button>
-    <button>6</button>
-    <button>7</button>
-    <button>8</button>
-    <button>9</button>
-    <button>+</button>
-    <button>-</button>
-    <button>*</button>
-    <button>/</button>
-    <button>=</button>
-    <button>Clear</button>
+    <button class='digit'>1</button>
+    <button class='digit'>2</button>
+    <button class='digit'>3</button>
+    <button class='digit'>4</button>
+    <button class='digit'>5</button>
+    <button class='digit'>6</button>
+    <button class='digit'>7</button>
+    <button class='digit'>8</button>
+    <button class='digit'>9</button>
+
+    <button class="operator" data-op="+">+</button>
+    <button class="operator" data-op="-">-</button>
+    <button class="operator" data-op="*">*</button>
+    <button class="operator" data-op="/">/</button>
+
+    <button class="equals">=</button>
+    <button class="clear">Clear</button>
+
+    <script src="calculator.js"></script>
 </body>
 </html>
