Added 0 key, oops!

--- a/calculator.html
+++ b/calculator.html
@@ -16,6 +16,7 @@
     <button class='digit'>7</button>
     <button class='digit'>8</button>
     <button class='digit'>9</button>
+    <button class='digit'>0</button>
 
     <button class="operator" data-op="+">+</button>
     <button class="operator" data-op="-">-</button>
