--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,6 @@
     <div class="calculator">
         <input type="text" id="calculator-display" value="0" readonly />
 
-        <!-- Buttons grouped into numbers and operators -->
         <div class="buttons">
             <div class="numbers">
                 <button class="clear">Clear</button>
@@ -35,6 +34,7 @@
             </div>
         </div>
     </div>
+    <script src="calculator.js"></script>
 </body>
 
 </html>
